# dat220projectmmg

./: .gitignore  test.txt  test2.txt
Client/: BaseState.h  BaseTextBox.cpp  BaseTextBox.h  Button.cpp  Button.h  CMakeLists.txt  ChatBox.cpp  ChatBox.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  SharedContext.h  StateManager.cpp  StateManager.h  State_Intro.cpp  State_Intro.h  State_Lobby.cpp  State_Lobby.h  State_MainMenu.cpp  State_MainMenu.h  TextBox.cpp  TextBox.h  TextInputArea.cpp  TextInputArea.h  Util.h  Window.cpp  Window.h  keys.cfg.txt  main.cpp
Client_ForServerTest/: CMakeLists.txt
Client_ForServerTest/Client/: Client.cpp  Client.h  Client_Main.cpp
Client_ForServerTest/Shared/: NetworkDefinitions.h  PacketTypes.cpp  PacketTypes.h
Client_WithChatbox/: CMakeLists.txt
Client_WithChatbox/Client/: BaseState.h  Client.cpp  Client.h  Client_Main.cpp  EventManager.cpp  EventManager.h  Game.cpp  Game.h  SharedContext.h  StateManager.cpp  StateManager.h  State_ChatTest.cpp  State_ChatTest.h  TextInputArea.cpp  TextInputArea.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h  keys.cfg.txt
Client_WithChatbox/Shared/: NetworkDefinitions.h  PacketTypes.cpp  PacketTypes.h
Server_AddingGroups/: CMakeLists.txt
Server_AddingGroups/Server/: Server.cpp  Server.h  Server_Main.cpp
Server_AddingGroups/Shared/: Main.cpp  NetworkDefinitions.h  PacketTypes.h
chatinputtest/: CMakeLists.txt  basetextbox.cpp  basetextbox.h  chatbox.cpp  chatbox.h  main.cpp  textbox.cpp  textbox.h  textinputarea.cpp  textinputarea.h
